try to avoid too wide images

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -13,7 +13,7 @@ body {
 
 img {
     height   : auto;
-    max-width: 70vw;
+    max-width: 65vw;
     max-height: 70vh;
 }
 
@@ -418,6 +418,7 @@ article p {
 
 figure {
    text-align: center;
+   margin: 0;
 }
 figcaption, figcaption > p {
    text-align: center;
